# nexo-plugin-sdks

./: README.md
.github/workflows/: conformance.yml  php-split.yml  php.yml  python.yml  typescript.yml
conformance/: README.md  __init__.py  lib.py  mock_host.py  run.py  test_lib.py
conformance/fixtures/: php_fixture.php  python_fixture.py  ts_fixture.mjs
conformance/scenarios/: 01_lifecycle.json  02_broker_event_publish.json  03_memory_recall.json  04_memory_recall_error.json  05_memory_recall_timeout.json  06_llm_complete.json  07_llm_complete_error.json  08_llm_complete_stream.json  09_tool_catalog_present.json  10_tool_catalog_absent.json  11_tool_invoke_happy.json  12_tool_invoke_args_omitted.json  13_tool_invoke_with_context_calls_host.json  14_tool_invoke_errors.json  15_tool_invoke_no_handler.json  16_method_not_found.json  17_oversize_and_malformed_frames.json  18_shutdown_drain_tool.json  19_shutdown_drain_abandons_host_call.json
php/: CHANGELOG.md  README.md  composer.json
php/src/: BrokerSender.php  Host.php  PluginAdapter.php  Tool.php  Wire.php
php/tests/: test_host_calls.php  test_lifecycle.php  test_tools.php
php/tests/fixtures/: bad-manifest-plugin.php  host-call-plugin.php  notool-plugin.php  tool-plugin.php
python/: CHANGELOG.md  README.md  pyproject.toml
python/nexo_plugin_sdk/: __init__.py  adapter.py  broker.py  errors.py  host.py  manifest.py  stdout_guard.py  tools.py  wire.py
python/tests/: test_dispatch.py  test_handshake.py  test_host_calls.py  test_lifecycle.py  test_stdout_guard.py  test_tools.py
typescript/: CHANGELOG.md  README.md  package.json
typescript/src/: adapter.ts  broker.ts  errors.ts  host.ts  index.ts  tools.ts
typescript/tests/: host-call.test.mjs  tools.test.mjs
typescript/tests/fixtures/: bad-manifest-plugin.mjs  host-call-plugin.mjs  notool-plugin.mjs  tool-plugin.mjs
