[project]
name = "nexo-plugin-sdk"
version = "0.2.0"
description = "Python SDK for nexo subprocess plugins"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Cristian Garcia", email = "informacion@cristiangarcia.co" }]
keywords = ["nexo", "plugin", "json-rpc", "agent", "subprocess"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "tomli; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/lordmacu/nexo-rs"
Repository = "https://github.com/lordmacu/nexo-rs"
"Bug Tracker" = "https://github.com/lordmacu/nexo-rs/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexo_plugin_sdk*"]

[tool.setuptools.package-data]
nexo_plugin_sdk = ["py.typed"]
